# MNN_android_vae_saf

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mnn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SAFlowEngine.cpp  SAFowEngine.h  native-lib.cpp
app/src/main/cpp/include/MNN/: Interpreter.hpp
app/src/main/java/com/example/mnn/: MNNNative.kt  MainActivity.kt  MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mnn/: ExampleUnitTest.kt
gradle/: libs.versions.toml
